# FREDSim

./: .gitignore  CMakeLists.txt  plot_script.sh  run_power_experiments.sh
examples/: CMakeLists.txt
examples/accelerated/: CMakeLists.txt  accelerated.cpp
examples/accelerated_full/: CMakeLists.txt  Makefile  accelerated_full.cpp  builder.cpp  builder.h  cmake_install.cmake  delay_bound.cpp  delay_bound.h  example.xml  generator.cpp  generator.h  progress.py  rta_ss.cpp  rta_ss.h  ss_task.h  standalone.cpp
examples/cbserver/: CMakeLists.txt
examples/energy/: CMakeLists.txt  energy.cpp
src/: AVRTask.cpp  CMakeLists.txt  abskernel.hpp  accelerate_instr.cpp  accelerate_instr.hpp  acceleratedtask.cpp  acceleratedtask.hpp  clusteredsched.cpp  clusteredsched.hpp  configure_instr.cpp  configure_instr.hpp  cpu.cpp  cpu.hpp  exeinstr.cpp  exeinstr.hpp  fcfsresmanager.cpp  fifosched.hpp  fpgakernel.cpp  fpgakernel.hpp  fpsched.hpp  hardwaretask.cpp  hardwaretask.hpp  kernel.cpp  kernel.hpp  powermodel.cpp  powermodel.hpp  ps_trace.cpp  ps_trace.hpp  reginstr.cpp  regtask.cpp  resmanager.hpp  resource.cpp  schedinstr.cpp  schedinstr.hpp  scheduler.cpp  spinlockinstr.cpp  spinlockinstr.hpp  task.cpp  task.hpp  taskevt.cpp  (+7 more)
test/: CMakeLists.txt  test_accelerated.cpp
www/cgi-bin/: perltest.pl
www/html/: index.php
www/html/simulator/: aggregator.php  checkStatus.php  chooser.php  index.php  plot.php  results  utility.php  visualizer.php
www/html/simulator/configs/: example.xml
www/html/simulator/old/: simulation_details.php
